Convert all challenges in the arrays3 section to the new format

--- a/challenges.yml
+++ b/challenges.yml
@@ -402,3 +402,75 @@ arrays2_guessautokeymc:
                 d: Bear
             correct: b
     grading: []
+
+arrays3_multiarraykeyscoding:
+    question: >
+        Let's get to know one of the friendliest pets in town!
+        Access the bio on Pancake and print it inside the `<h1>` tag.
+    step: ~
+    files:
+        index.php: ~
+    features:
+        editor: ~
+        browser: ~
+    grading:
+        look_for_variable:
+            type: php
+            assertTrue: input("index.php") matches "/$pets[2]['bio']/"
+            failure: I don't see "$pets[2]['bio']" in your file
+        check_heading:
+            type: http
+            assertTrue: css("h1:contains('Breakfast is my favorite!')")
+            failure: Make sure the `Breakfast is my favorite!` text is being printed *inside* a `h1` tag
+
+arrays3_foreachassociativecoding:
+    question: >
+        The site is *so* popular that we're adding a store that
+        sells the world's squeekiest dog toys. Using the `$toys`
+        array below, create a `foreach` statement and print each toy's
+        `name` inside an `h3` tag and its `color` inside an `h4` tag.
+        Avoid needing to echo the HTML tags by closing PHP at the end
+        of the `foreach` line.
+    step: ~
+    files:
+        index.php: ~
+    features:
+        editor: ~
+        browser: ~
+    grading:
+        check_heading_1:
+            type: http
+            assertTrue: css("h3:contains('Bacon Bone')")
+            failure: Make sure the `Bacon Bone` text is being printed *inside* a `h3` tag
+        check_heading_2:
+            type: http
+            assertTrue: css("h3:contains('Tennis Ball')")
+            failure: Make sure the `Tennis Ball` text is being printed *inside* a `h3` tag
+        check_heading_3:
+            type: http
+            assertTrue: css("h4:contains('Bacon-colored')")
+            failure: Make sure the `Bacon-colored` text is being printed *inside* a `h4` tag
+        check_heading_4:
+            type: http
+            assertTrue: css("h4:contains('Yellow')")
+            failure: Make sure the `Yellow` text is being printed *inside* a `h4` tag
+
+arrays3_countandvariablereordercoding:
+    question: >
+        Using the `count()` function, print the total number of pet toys
+        that we're selling in the `<h4>` tag.
+    step: ~
+    files:
+        index.php: ~
+    features:
+        editor: ~
+        browser: ~
+    grading:
+        look_for_count:
+            type: php
+            assertTrue: input("index.php") matches "/count(/"
+            failure: I don't see "count()" function in your file
+        check_heading:
+            type: http
+            assertTrue: css("h4:contains(3)")
+            failure: I don't see the number `3` inside the `h4` tag. Are you printing the `count()` there?
