--- a/challenges.yml
+++ b/challenges.yml
@@ -657,3 +657,46 @@ ifstatement_fixerrorsifelsecoding:
             type: http
             assertTrue: css("h4:contains('no color')")
             failure: I don't see the `no color` text inside the `h4` tag
+
+systemsetup_dnsfairymc:
+    question: >
+        What's the job of the DNS (fairy)?
+    explanation: >
+        The DNS converts a domain name to an IP address. With the IP address, the request
+        can find the right server to go to.
+    features:
+        multiple_choice:
+            choices:
+                a: To guide the request to the correct server
+                b: To turn a domain name into an IP address
+                c: To listen on a port for a request
+                d: To pass the request to the web server
+            correct: b
+    grading: []
+
+systemsetup_localhostportfilenamemc: ~
+    question: >
+        Suppose I put `http://localhost:8000` into my browser. Which of the following is true:
+    explanation: >
+        `localhost` is a special string that resolves to the IP address of the computer you're
+        using right now. This means that the request leaves our computer, then comes right
+        back. The `:8000` means that it knocks on the door of port `8000`. Finally, in most
+        setups, since there is no filename in the URL, `index.php` is executed and returned.
+    features:
+        multiple_choice:
+            choices:
+                a: >
+                    The request cannot be completed because there is no filename
+                    (e.g. `index.php`) in the URL
+                b: >
+                    The request uses the DNS to find the IP address of a remote
+                    computer, knocks on the door of port `8000`, and then executes
+                    and returns `index.php`
+                c: >
+                    The request leaves via port `8000` on my computer, but then
+                    routes back to my computer and executes `index.php`
+                d: >
+                    The request routes back to port 8000 on my local computer and
+                    `index.php` is executed and returned
+            correct: d
+    grading: []
